// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Onboarding AskNotifications component should pass additional props to Slide component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Can we keep you informed?
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll let you know when important things are happening and keep you in the loop
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          Object {
            "color": "rgba(39, 39, 46, 0.3)",
            "marginLeft": -16,
            "paddingHorizontal": 16,
            "paddingVertical": 15,
          }
        }
      >
        Later
      </Text>
    </View>
  </View>
</View>
`;

exports[`The Onboarding AskNotifications component should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Can we keep you informed?
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll let you know when important things are happening and keep you in the loop
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The Onboarding AskNotifications component should render a BackgroundComponent 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/640/640/?random",
                "url": "https://picsum.photos/640/640/?random",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Can we keep you informed?
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll let you know when important things are happening and keep you in the loop
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The Onboarding AskNotifications component should render a button with custom text 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Can we keep you informed?
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll let you know when important things are happening and keep you in the loop
          </Text>
        </View>
        <View
          horizontal={false}
          style={
            Object {
              "paddingHorizontal": 0,
              "paddingVertical": 16,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              bordered={false}
              disabled={false}
              pill={false}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#17B582",
                  "borderColor": "#17B582",
                  "borderRadius": 16,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                  "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#F4F7F8",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Custom button text
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The Onboarding AskNotifications component should render a custom description 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Can we keep you informed?
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Custom description text
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The Onboarding AskNotifications component should render a custom title 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Custom title text
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll let you know when important things are happening and keep you in the loop
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The Onboarding AskNotifications component should render the button disabled 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Can we keep you informed?
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll let you know when important things are happening and keep you in the loop
          </Text>
        </View>
        <View
          horizontal={false}
          style={
            Object {
              "paddingHorizontal": 0,
              "paddingVertical": 16,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              bordered={false}
              disabled={true}
              pill={false}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#17B582",
                  "borderColor": "#17B582",
                  "borderRadius": 16,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                  "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#F4F7F8",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Yes, enable notifications
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The Onboarding AskNotifications component should render with a button 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Can we keep you informed?
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll let you know when important things are happening and keep you in the loop
          </Text>
        </View>
        <View
          horizontal={false}
          style={
            Object {
              "paddingHorizontal": 0,
              "paddingVertical": 16,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              bordered={false}
              disabled={false}
              pill={false}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#17B582",
                  "borderColor": "#17B582",
                  "borderRadius": 16,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                  "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#F4F7F8",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Yes, enable notifications
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
